# auth-me

./: .gitignore  README.md  pyproject.toml  requirements.txt  tt.txt
pad/: authorize.py  environment.yaml
pad/utils/: __init__.py
pad/utils/clients/: __init__.py  application.py
pad/utils/modules/: client.py
