[project]
name = "pad"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon Campbell"}
]

packages = [
    { include = "pad"}
]

readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohappyeyeballs (>=2.6.1,<3.0.0)",
    "msal (>=1.32.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
